# DM_Linear-Algebraic-Equations

./: .gitignore  CMakeLists.txt  DM_Linear-Algebraic-Equations_uk_UA.ts  README.md  SeidelsMethod.h  UISeidelsSetup.ui  linearalgebraicequations.cpp  linearalgebraicequations.h  linearalgebraicequations.ui  main.cpp  uisedelsresult.cpp  uisedelsresult.ui  uiseidelssetup.cpp  uiseidelssetup.h
include/: SeidelsMethod.h  uisedelsresult.h  uiseidelssetup.h
resources/languages/: DM_Linear-Algebraic-Equations_uk_UA.ts
src/: linearalgebraicequations.cpp  uisedelsresult.cpp  uiseidelssetup.cpp
tests/: CMakeLists.txt  tests.cpp
views/: linearalgebraicequations.ui  uisedelsresult.ui
